# vulcan-local-db

./: .gitignore  README.md  README.zh-CN.md  docker-compose.example.yml
.github/workflows/: build-native-release.yml  docker-build.yml
docs/: README.en.md  README.zh-CN.md  VLDB_script_review.md  docker-install.en.md  docker-install.zh-CN.md  docker.en.md  docker.zh-CN.md  native-install.en.md  native-install.zh-CN.md  script-install.en.md  script-install.zh-CN.md  vldb-duckdb.en.md  vldb-duckdb.zh-CN.md  vldb-lancedb.en.md  vldb-lancedb.zh-CN.md
scripts/: install.ps1  install.sh  vldb  vldb.cmd  vldb.ps1  vldg  vldg.cmd  vldg.ps1
vldb-duckdb/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  vldb-duckdb.json  vldb-duckdb.json.example
vldb-duckdb/demo/go-client/: README.md  generate.sh  go.mod  go.sum  main.go
vldb-duckdb/demo/go-client/proto/v1/: duckdb.pb.go  duckdb_grpc.pb.go
vldb-duckdb/docker/: vldb-duckdb.json
vldb-duckdb/proto/v1/: duckdb.proto
vldb-duckdb/src/: config.rs  db_lock.rs  logging.rs  main.rs  service.rs
vldb-lancedb/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  vldb-lancedb.json.example
vldb-lancedb/docker/: vldb-lancedb.json
vldb-lancedb/examples/go-client/: README.md  go.mod  main.go
vldb-lancedb/proto/v1/: lancedb.proto
vldb-lancedb/src/: config.rs  logging.rs  main.rs  service.rs
vldb-manager/: Cargo.toml  README.md
vldb-manager/src/: app.rs  installed.rs  main.rs  service.rs  ui.rs
