[package]
name = "vldb-duckdb"
version = "0.1.2"
edition = "2024"
rust-version = "1.94"
build = "build.rs"

[dependencies]
arrow = { version = "58.1.0", default-features = false, features = ["ipc"] }
bytes = "1.11.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
duckdb = { version = "1.10501.0", features = ["bundled"] }
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
