[package]
name = "vldb-manager"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
crossterm = "0.29.0"
flate2 = "1.1.5"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
